// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="bg-sunset navbar navbar-expand-md"
  >
    <div
      class="container"
    >
      <a
        class="brand navbar-brand"
        href="/"
      >
        <img
          alt="logo"
          src="/brain.png"
        />
        Trivia Guru
      </a>
      <button
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/quizzes/"
            >
              Quizzes
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/leaderboard"
            >
              Leaderboard
            </a>
          </li>
        </ul>
        <ul
          class="navbar-nav"
        >
          <li
            class="dropdown nav-item"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle nav-link"
              href="#"
            >
              My Dashboard
            </a>
            <div
              aria-hidden="true"
              class="dropdown-menu dropdown-menu-end"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-header"
                tabindex="-1"
              >
                <i
                  class="fa-solid fa-star me-2"
                />
                testuser - Level 14 Pro
              </h6>
              <div
                class="dropdown-divider"
                tabindex="-1"
              />
              <button
                class="dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <li
                  class="nav-item"
                >
                  <a
                    class="nav-link"
                    href="/profile"
                  >
                    Profile
                  </a>
                </li>
              </button>
              <button
                class="dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <li
                  class="nav-item"
                >
                  <a
                    class="nav-link"
                    href="/stats"
                  >
                    Statistics / Badges
                  </a>
                </li>
              </button>
              <button
                class="dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <li
                  class="nav-item"
                >
                  <a
                    class="nav-link"
                    href="/personalbest"
                  >
                    Personal Best Scores
                  </a>
                </li>
              </button>
              <button
                class="dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <li
                  class="nav-item"
                >
                  <a
                    class="nav-link"
                    href="/sessions"
                  >
                    Recent Played Sessions
                  </a>
                </li>
              </button>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/favourites"
            >
              My Favourites
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/logout"
            >
              Log out
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="bg-sunset navbar navbar-expand-md"
  >
    <div
      class="container"
    >
      <a
        class="brand navbar-brand"
        href="/"
      >
        <img
          alt="logo"
          src="/brain.png"
        />
        Trivia Guru
      </a>
      <button
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/quizzes/"
            >
              Quizzes
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/leaderboard"
            >
              Leaderboard
            </a>
          </li>
        </ul>
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/login"
            >
              Login
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/signup"
            >
              Sign Up
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
